k8s/bookinfo/blue/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bookinfo-blue
  labels:
    istio-injection: enabled
